fixed carousel showing over snif dropdown z-index now 20 and 10 respectively!

--- a/src/componentsCSS/ComingSoons.css
+++ b/src/componentsCSS/ComingSoons.css
@@ -9,6 +9,7 @@
     border-right: 5px solid gray;
     border-radius: 25px;
     box-sizing: border-box;
+    z-index: 10;
 }
 
 .coming-soon-carousel-wrapper {
